[package]
name = "cargo-aur"
version = "1.1.1"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"
description = "Prepare Rust projects to be released on the Arch Linux User Repository."
homepage = "https://github.com/fosskers/cargo-aur"
repository = "https://github.com/fosskers/cargo-aur"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "archlinux", "aur"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
gumdrop = "0.8"
hmac-sha256 = "0.1"
itertools = "0.9"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"

[profile.release]
lto = true
