[package]
name = "cargo-aur"
version = "1.5.0"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2021"
description = "Prepare Rust projects to be released on the Arch Linux User Repository."
homepage = "https://github.com/fosskers/cargo-aur"
repository = "https://github.com/fosskers/cargo-aur"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "archlinux", "aur"]
categories = ["command-line-utilities"]

[dependencies]
colored = "2.0"
gumdrop = "0.8"
hmac-sha256 = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
strip = true
